# accounts

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: account.rs  bank_txs.rs  chart_of_accounts.rs  journal_entry.rs  lib.rs  lines.rs  main.rs  money.rs
src/account/: mod.rs  raw.rs
src/bank_txs/: mod.rs  rec_rules.rs  reconciliation_rules.rs
src/entry/: invoice.rs  journal.rs  mod.rs  payment.rs  raw.rs  raw_entry.rs
src/report/: mod.rs  raw.rs
tests/: tests.rs
tests/fixtures/: ChartOfAccounts.yaml  IncomeStatement.yaml  entries.yaml
tests/fixtures/entries/: 3000-01-01-Payment.yaml
tests/fixtures/entries/2020/: 01.yaml
tests/fixtures/entries/3000/: 01.yaml
tests/fixtures/entries_flat/: .ignoreme  2020-01-01-Invoice.yaml  2020-01-02-Journal.yaml  2020-01-02-Payment.yaml  3000-01-01-Invoice.yaml  3000-01-02-Payment.yaml
tests/fixtures/entries_multiple_entries_in_one_file/: 2020.yaml
tests/fixtures/entries_nested_dirs/2020/01/: 01-Invoice.yaml
tests/fixtures/entries_nested_dirs/2020/02/: 01-Payment.yaml
tests/fixtures/entries_nested_dirs/3000/01/: 01-Payment.yaml
tests/fixtures/entries_nested_dirs/3000/02/: 01-Payment.yaml
tests/fixtures/entries_recurring/2020/: 01.yaml  02.yaml  03.yaml
tests/fixtures/entries_recurring/3000/: 01.yaml  02.yaml  03.yaml
