[package]
name = "accounts"
version = "0.1.0"
authors = ["Luke Nimtz <luke.nimtz@gmail.com>"]
edition = "2018"

[dependencies]
async-std = {version = "1.9.0", features = ["attributes", "unstable"]}
futures = "0.3.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
anyhow = "1.0.37"
chrono = "0.4.19"
rust_decimal = "1.10.1"
async-walkdir = "0.2.0"
num-traits = "0.2.14"
rrule = "0.7.0"
chrono-tz = "0.6.1"
clap = "3.0.0-beta.2"
lines-ext = { git = "https://github.com/protometa/lines-ext" }
indoc = "2.0.6"
rule = "0.1.6"
serde_json = "1.0.141"
serde_with = "3.14.0"
itertools = "0.10.0"

[dev-dependencies]
itertools = "0.10.0"
